--- a/public/stylesheets/design.css
+++ b/public/stylesheets/design.css
@@ -4,3 +4,15 @@ body {
 #searchh1 {
   margin-top: 20vh;
 }
+.card {
+  margin-left: 12vw;
+}
+.card-img {
+  height: 20vh;
+}
+#resulth1 {
+  margin-left: 12vw;
+  margin-top: 5rem;
+  margin-bottom: 3rem;
+  font-weight: 700;
+}
